Set a minimum width to avoid visible reflow
… most of the time. Is this a Firefox bug?

--- a/popup/hosts.css
+++ b/popup/hosts.css
@@ -1,6 +1,7 @@
 body {
 	font-family: sans-serif;
 	margin: 0;
+	min-width: 430px;
 }
 
 #recent {
@@ -12,7 +13,6 @@ body {
 .host {
 	align-items: center;
 	display: flex;
-	justify-content: space-between;
 	padding: 0.6em;
 }
 
@@ -21,11 +21,13 @@ body {
 }
 
 .hostname {
+	flex: 1;
+	text-align: right;
 	white-space: nowrap;
 }
 
 .actions {
-	margin-left: 1em;
+	margin-left: 0.6em;
 }
 
 .actions input {
@@ -34,4 +36,5 @@ body {
 
 #empty {
 	margin: 0.6em;
+	text-align: center;
 }
